  * Add -F/--rcfile to generate a .pycheckrc file
  * Fix checking files in standard library before local file
  * Fix spurious warning when using from X import Y and imports in methods
	(Module (m) re-imported)
  * Fix spurious warning when doing:  from X import Y, Z
  * Fix spurious warning when deriving from Exception() and
	instantiating object with multiple arguments
  * Fix tests (forgot to add : after line number in expected results)

Version 0.7	- 16 July 2001
  * Improve import warning messages, add from checks
  * checker.py -h prints defaults after processing .pycheckrc file
  * Add config option -k/--pkgimport to disable unused imports from __init__.py
  * Add warning for variable used before being set
  * Improve format string checks/warnings
  * Check arguments to constructors
  * Check that self is first arg to base constructor
  * Add -e/--errors option to only warn about likely errors
  * Make 'self' configurable as the first argument to methods
  * Add check that there is a c'tor when instantiating an object and 
	passing arguments
  * Add config option (-N/--initreturn) to turn off warnings 
	when returning None from __init__()
  * Fix internal error with python 2.1 which defines a new op: LOAD_DEREF
  * Check in lambda functions for module/variable use
  * Fix inability to evaluate { 1: 'a' } inline,
	led to incorrect __init__() not called warnings
  * Fix exception when class overrides __special__() methods & raise exception
  * Fix check in format strings when using '%*g %*.*g', etc
  * Add check for static class attributes
  * Fix checking of module attributes
  * Fix wrong filename in 'Base class (xxx) __init__() not called'
  	when doing a from X import *
  * Fix 'No attribute found' for very dynamic classes
  	(may also work for classes that use __getattr__)

Version 0.6.1	- 27 June 2001
  * Fix bug which caused an exception from some import code
  * Fix bug in determining if there is an implicit return

Version 0.6	- 25 June 2001