@@ -18,6 +18,8 @@ Version 0.8	- xx July 2001
   * Fix spurious warning when doing:  from X import Y, Z
   * Fix spurious warning when deriving from Exception() and
 	instantiating object with multiple arguments
+  * Fix method argument checks when calling base class methods
+  * Fix error msg to base constructors (msg count was wrong)
   * Fix tests (forgot to add : after line number in expected results)
 
 Version 0.7	- 16 July 2001
